--- a/global/src/com/haulmont/ext/core/entity/messages_ru.properties
+++ b/global/src/com/haulmont/ext/core/entity/messages_ru.properties
@@ -76,7 +76,8 @@ ContractPP.villa = Город
 ContractPP.number = число
 ContractPP.amount = Сумма
 ContractPP.textAmount = Сумма прописью
-ContractPP.dateContr = Дата
+ContractPP.dateContr = Дата начала действия
+ContractPP.dateClose = Дата окончания действия
 ContractPP.client = Представитель учреждения
 ContractPP.head = Глава района
 ContractPP.extCompany = Клиент
