--- a/web/src/com/haulmont/ext/web/ui/ContractPP/messages_ru.properties
+++ b/web/src/com/haulmont/ext/web/ui/ContractPP/messages_ru.properties
@@ -15,7 +15,8 @@ textAmount = Сумма прописью
 head = Глава района
 extCompany = Клиент
 client = Представитель учреждения
-dateContr = Дата
+dateContr = Дата начала действия
+dateClose = Дата окончания действия
 mainTab = Главное меню
 cardProjectsTab =Проекты
 comment = Обсуждения
@@ -43,6 +44,7 @@ EntityLogAttr.value=Значение
 procName=Тек. процесс
 state=Тек. состояние
 
+
 actions.Remove=Удалить
 actions.Ok=ОК
 actions.Cancel=Отмена
@@ -60,6 +62,7 @@ error.requiredValue=Заполните поле
 open=Открыть
 modullTab = Спецификация
 add = Добавить
+saveBtn = Сохранить
 modullTable.add = Добавить
 modullTable.remove = Удалить
 modullTab.ModullName = Наименование модуля
