add enum to nameContract

--- a/global/src/com/haulmont/ext/core/entity/Enum/messages_ru.properties
+++ b/global/src/com/haulmont/ext/core/entity/Enum/messages_ru.properties
@@ -6,3 +6,6 @@
 
 VillaEnum.CITY=Город
 VillaEnum.VILLAGE=Село
+ContractDocType.LICENSE_SERVICE = Лицензионное обслуживание
+ContractDocType.PROVIDE_SERVICE = Поставка экземпляра
+ContractDocType.PRODUCT_DELIVERY = Оказание услуг
