--- a/web/src/com/haulmont/ext/web/ui/ContractPP/messages_ru.properties
+++ b/web/src/com/haulmont/ext/web/ui/ContractPP/messages_ru.properties
@@ -1,81 +1,82 @@
-browserCaption=Договор ПП Парус
-editorCaption=<#if item.versionOf??>Просмотр версии\
-  <#elseif item.number?? && item.number != ''>Договор ПП Парус № ${item.number}\
-  <#else>Редактирование договора ПП Парус</#if>\
+browserCaption=\u0414\u043E\u0433\u043E\u0432\u043E\u0440 \u041F\u041F \u041F\u0430\u0440\u0443\u0441
+editorCaption=<#if item.versionOf??>\u041F\u0440\u043E\u0441\u043C\u043E\u0442\u0440 \u0432\u0435\u0440\u0441\u0438\u0438\
+  <#elseif item.number?? && item.number != ''>\u0414\u043E\u0433\u043E\u0432\u043E\u0440 \u041F\u041F \u041F\u0430\u0440\u0443\u0441 \u2116 ${item.number}\
+  <#else>\u0420\u0435\u0434\u0430\u043A\u0442\u0438\u0440\u043E\u0432\u0430\u043D\u0438\u0435 \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u0430 \u041F\u041F \u041F\u0430\u0440\u0443\u0441</#if>\
   <#if item.docOfficeDocKind??>\
-  <#if item.docOfficeDocKind.id == 'I'> (Вх.)\
-  <#elseif item.docOfficeDocKind.id == 'O'> (Исх.)\
-  <#elseif item.docOfficeDocKind.id == 'T'> (Внутр.)</#if></#if>
+  <#if item.docOfficeDocKind.id == 'I'> (\u0412\u0445.)\
+  <#elseif item.docOfficeDocKind.id == 'O'> (\u0418\u0441\u0445.)\
+  <#elseif item.docOfficeDocKind.id == 'T'> (\u0412\u043D\u0443\u0442\u0440.)</#if></#if>
 
-resolutions = Журнал действий
-villa = Город
-number = Номер
-amount = Сумма
-textAmount = Сумма прописью
-head = Глава района
-extCompany = Клиент
-client = Представитель учреждения
-dateContr = Дата начала действия
-dateClose = Дата окончания действия
-mainTab = Главное меню
-cardProjectsTab =Проекты
-comment = Обсуждения
-hasAttachments = Вложения
-attachments = Вложения
-processTab = Процессы
-cardCommentTab = Обсуждения
-hierarchy=Иерархия
-docTreeTab=Структура подчиненности
-cardRelationsTab=Связанные документы и задачи
-history=История
-docLogTab=История изменений
-versionsTab=Версии
-createTs=Создано
-docKind=Вид
-date=Дата
-hideResolutions=Скрыть журнал действий
-securityTab=Безопасность
-EntityLogItem.eventTs=Дата
-EntityLogItem.user=Пользователь
-EntityLogItem.entity=Объект
-EntityLogItem.type=Действие
-EntityLogAttr.name=Атрибут
-EntityLogAttr.value=Значение
-procName=Тек. процесс
-state=Тек. состояние
+resolutions = \u0416\u0443\u0440\u043D\u0430\u043B \u0434\u0435\u0439\u0441\u0442\u0432\u0438\u0439
+villa = \u0413\u043E\u0440\u043E\u0434
+number = \u041D\u043E\u043C\u0435\u0440
+amount = \u0421\u0443\u043C\u043C\u0430
+textAmount = \u0421\u0443\u043C\u043C\u0430 \u043F\u0440\u043E\u043F\u0438\u0441\u044C\u044E
+head = \u0413\u043B\u0430\u0432\u0430 \u0440\u0430\u0439\u043E\u043D\u0430
+extCompany = \u041A\u043B\u0438\u0435\u043D\u0442
+client = \u041F\u0440\u0435\u0434\u0441\u0442\u0430\u0432\u0438\u0442\u0435\u043B\u044C \u0443\u0447\u0440\u0435\u0436\u0434\u0435\u043D\u0438\u044F
+dateContr = \u0414\u0430\u0442\u0430 \u043D\u0430\u0447\u0430\u043B\u0430 \u0434\u0435\u0439\u0441\u0442\u0432\u0438\u044F
+dateClose = \u0414\u0430\u0442\u0430 \u043E\u043A\u043E\u043D\u0447\u0430\u043D\u0438\u044F \u0434\u0435\u0439\u0441\u0442\u0432\u0438\u044F
+mainTab = \u0413\u043B\u0430\u0432\u043D\u043E\u0435 \u043C\u0435\u043D\u044E
+cardProjectsTab =\u041F\u0440\u043E\u0435\u043A\u0442\u044B
+comment = \u041E\u0431\u0441\u0443\u0436\u0434\u0435\u043D\u0438\u044F
+hasAttachments = \u0412\u043B\u043E\u0436\u0435\u043D\u0438\u044F
+attachments = \u0412\u043B\u043E\u0436\u0435\u043D\u0438\u044F
+processTab = \u041F\u0440\u043E\u0446\u0435\u0441\u0441\u044B
+cardCommentTab = \u041E\u0431\u0441\u0443\u0436\u0434\u0435\u043D\u0438\u044F
+hierarchy=\u0418\u0435\u0440\u0430\u0440\u0445\u0438\u044F
+docTreeTab=\u0421\u0442\u0440\u0443\u043A\u0442\u0443\u0440\u0430 \u043F\u043E\u0434\u0447\u0438\u043D\u0435\u043D\u043D\u043E\u0441\u0442\u0438
+cardRelationsTab=\u0421\u0432\u044F\u0437\u0430\u043D\u043D\u044B\u0435 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u044B \u0438 \u0437\u0430\u0434\u0430\u0447\u0438
+history=\u0418\u0441\u0442\u043E\u0440\u0438\u044F
+docLogTab=\u0418\u0441\u0442\u043E\u0440\u0438\u044F \u0438\u0437\u043C\u0435\u043D\u0435\u043D\u0438\u0439
+versionsTab=\u0412\u0435\u0440\u0441\u0438\u0438
+createTs=\u0421\u043E\u0437\u0434\u0430\u043D\u043E
+docKind=\u0412\u0438\u0434
+date=\u0414\u0430\u0442\u0430
+hideResolutions=\u0421\u043A\u0440\u044B\u0442\u044C \u0436\u0443\u0440\u043D\u0430\u043B \u0434\u0435\u0439\u0441\u0442\u0432\u0438\u0439
+securityTab=\u0411\u0435\u0437\u043E\u043F\u0430\u0441\u043D\u043E\u0441\u0442\u044C
+EntityLogItem.eventTs=\u0414\u0430\u0442\u0430
+EntityLogItem.user=\u041F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044C
+EntityLogItem.entity=\u041E\u0431\u044A\u0435\u043A\u0442
+EntityLogItem.type=\u0414\u0435\u0439\u0441\u0442\u0432\u0438\u0435
+EntityLogAttr.name=\u0410\u0442\u0440\u0438\u0431\u0443\u0442
+EntityLogAttr.value=\u0417\u043D\u0430\u0447\u0435\u043D\u0438\u0435
+procName=\u0422\u0435\u043A. \u043F\u0440\u043E\u0446\u0435\u0441\u0441
+state=\u0422\u0435\u043A. \u0441\u043E\u0441\u0442\u043E\u044F\u043D\u0438\u0435
 
 
-actions.Remove=Удалить
-actions.Ok=ОК
-actions.Cancel=Отмена
-removed=Удален
-dialogs.Confirmation.RemoveCard=Имеются связанные записи. Вы хотите очистить основание в связанных записях и удалить выбранную запись?<br>Основание будет очищено в следующих записях:<br>%s
-actions.CreateNew=Новый
-actions.Create=Создать
-actions.Copy=Копировать
-deleteNotification=Убрать уведомления
-cardSend.dialogHeader=Имеются пользователи без прав
-cardSend.dialogMessage=Комментарий отправлен пользователям без права просмотра на этот документ. Разрешить пользователям просмотр документа?
-contractPP.new=Новые
-currentActors=Сейчас у
-error.requiredValue=Заполните поле
-open=Открыть
-modullTab = Спецификация
-add = Добавить
-saveBtn = Сохранить
-modullTable.add = Добавить
-modullTable.remove = Удалить
-modullTab.ModullName = Наименование модуля
-modullTab.ModullTotal = Общая стоимость
-modullTab.ModullCount = Количество
-modullTab.ModullPrice = Цена за 1 ед.
-modullTab.ModullTotalCost = Итого
-modullName = Наименование модуля
-modullCount = Количество
-modullPrice = Цена за 1 ед.
-modullTotal = Общая стоимость
-modullTotalCost = Итого
-Contract_LO = Договор ЛО
-ContractOU = Договор ОУ
-ContractPI = Договор ПЭ
-nameContract = Наименование документа
+actions.Remove=\u0423\u0434\u0430\u043B\u0438\u0442\u044C
+actions.Ok=\u041E\u041A
+actions.Cancel=\u041E\u0442\u043C\u0435\u043D\u0430
+removed=\u0423\u0434\u0430\u043B\u0435\u043D
+dialogs.Confirmation.RemoveCard=\u0418\u043C\u0435\u044E\u0442\u0441\u044F \u0441\u0432\u044F\u0437\u0430\u043D\u043D\u044B\u0435 \u0437\u0430\u043F\u0438\u0441\u0438. \u0412\u044B \u0445\u043E\u0442\u0438\u0442\u0435 \u043E\u0447\u0438\u0441\u0442\u0438\u0442\u044C \u043E\u0441\u043D\u043E\u0432\u0430\u043D\u0438\u0435 \u0432 \u0441\u0432\u044F\u0437\u0430\u043D\u043D\u044B\u0445 \u0437\u0430\u043F\u0438\u0441\u044F\u0445 \u0438 \u0443\u0434\u0430\u043B\u0438\u0442\u044C \u0432\u044B\u0431\u0440\u0430\u043D\u043D\u0443\u044E \u0437\u0430\u043F\u0438\u0441\u044C?<br>\u041E\u0441\u043D\u043E\u0432\u0430\u043D\u0438\u0435 \u0431\u0443\u0434\u0435\u0442 \u043E\u0447\u0438\u0449\u0435\u043D\u043E \u0432 \u0441\u043B\u0435\u0434\u0443\u044E\u0449\u0438\u0445 \u0437\u0430\u043F\u0438\u0441\u044F\u0445:<br>%s
+actions.CreateNew=\u041D\u043E\u0432\u044B\u0439
+actions.Create=\u0421\u043E\u0437\u0434\u0430\u0442\u044C
+actions.Copy=\u041A\u043E\u043F\u0438\u0440\u043E\u0432\u0430\u0442\u044C
+deleteNotification=\u0423\u0431\u0440\u0430\u0442\u044C \u0443\u0432\u0435\u0434\u043E\u043C\u043B\u0435\u043D\u0438\u044F
+cardSend.dialogHeader=\u0418\u043C\u0435\u044E\u0442\u0441\u044F \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u0438 \u0431\u0435\u0437 \u043F\u0440\u0430\u0432
+cardSend.dialogMessage=\u041A\u043E\u043C\u043C\u0435\u043D\u0442\u0430\u0440\u0438\u0439 \u043E\u0442\u043F\u0440\u0430\u0432\u043B\u0435\u043D \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F\u043C \u0431\u0435\u0437 \u043F\u0440\u0430\u0432\u0430 \u043F\u0440\u043E\u0441\u043C\u043E\u0442\u0440\u0430 \u043D\u0430 \u044D\u0442\u043E\u0442 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442. \u0420\u0430\u0437\u0440\u0435\u0448\u0438\u0442\u044C \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F\u043C \u043F\u0440\u043E\u0441\u043C\u043E\u0442\u0440 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u0430?
+contractPP.new=\u041D\u043E\u0432\u044B\u0435
+currentActors=\u0421\u0435\u0439\u0447\u0430\u0441 \u0443
+error.requiredValue=\u0417\u0430\u043F\u043E\u043B\u043D\u0438\u0442\u0435 \u043F\u043E\u043B\u0435
+open=\u041E\u0442\u043A\u0440\u044B\u0442\u044C
+modullTab = \u0421\u043F\u0435\u0446\u0438\u0444\u0438\u043A\u0430\u0446\u0438\u044F
+add = \u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C
+saveBtn = \u0421\u043E\u0445\u0440\u0430\u043D\u0438\u0442\u044C
+modullTable.add = \u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C
+modullTable.remove = \u0423\u0434\u0430\u043B\u0438\u0442\u044C
+modullTab.ModullName = \u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435 \u043C\u043E\u0434\u0443\u043B\u044F
+modullTab.ModullTotal = \u041E\u0431\u0449\u0430\u044F \u0441\u0442\u043E\u0438\u043C\u043E\u0441\u0442\u044C
+modullTab.ModullCount = \u041A\u043E\u043B\u0438\u0447\u0435\u0441\u0442\u0432\u043E
+modullTab.ModullPrice = \u0426\u0435\u043D\u0430 \u0437\u0430 1 \u0435\u0434.
+modullTab.ModullTotalCost = \u0418\u0442\u043E\u0433\u043E
+modullName = \u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435 \u043C\u043E\u0434\u0443\u043B\u044F
+modullCount = \u041A\u043E\u043B\u0438\u0447\u0435\u0441\u0442\u0432\u043E
+modullPrice = \u0426\u0435\u043D\u0430 \u0437\u0430 1 \u0435\u0434.
+modullTotal = \u041E\u0431\u0449\u0430\u044F \u0441\u0442\u043E\u0438\u043C\u043E\u0441\u0442\u044C
+modullTotalCost = \u0418\u0442\u043E\u0433\u043E
+Contract_LO = \u0414\u043E\u0433\u043E\u0432\u043E\u0440 \u041B\u041E
+ContractOU = \u0414\u043E\u0433\u043E\u0432\u043E\u0440 \u041E\u0423
+ContractPI = \u0414\u043E\u0433\u043E\u0432\u043E\u0440 \u041F\u042D
+nameContract = \u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u0430
+nameOrganisation = \u0418\u043C\u044F \u043E\u0440\u0433\u0430\u043D\u0438\u0437\u0430\u0446\u0438\u0438
