--- a/web/src/com/haulmont/ext/web/ui/ContractPP/messages_ru.properties
+++ b/web/src/com/haulmont/ext/web/ui/ContractPP/messages_ru.properties
@@ -44,6 +44,8 @@ EntityLogAttr.value=Значение
 procName=Тек. процесс
 state=Тек. состояние
 
+nameOrganisation = Наименование организации
+nameContract = Наименование документа
 actions.Remove=Удалить
 actions.Ok=ОК
 actions.Cancel=Отмена
