change enum messages_ru

--- a/global/src/com/haulmont/ext/core/entity/Enum/messages_ru.properties
+++ b/global/src/com/haulmont/ext/core/entity/Enum/messages_ru.properties
@@ -4,10 +4,10 @@
 # Use is subject to license terms.
 #
 
-VillaEnum.CITY=\u0413\u043E\u0440\u043E\u0434
-VillaEnum.VILLAGE=\u0421\u0435\u043B\u043E
-ContractDocType.LICENSE_SERVICE = \u041B\u0438\u0446\u0435\u043D\u0437\u0438\u043E\u043D\u043D\u043E\u0435 \u043E\u0431\u0441\u043B\u0443\u0436\u0438\u0432\u0430\u043D\u0438\u0435
-ContractDocType.PROVIDE_SERVICE = \u041F\u043E\u0441\u0442\u0430\u0432\u043A\u0430 \u044D\u043A\u0437\u0435\u043C\u043F\u043B\u044F\u0440\u0430
-ContractDocType.PRODUCT_DELIVERY = \u041E\u043A\u0430\u0437\u0430\u043D\u0438\u0435 \u0443\u0441\u043B\u0443\u0433
-NameOrganisationEnum.PARUS = OOO "\u0414\u0430\u0433\u0435\u0441\u0442\u0430\u043D - \u041F\u0430\u0440\u0443\u0441"
-NameOrganisationEnum.INFORM = \u041E\u041E\u041E "\u042E\u0433 - \u0418\u043D\u0444\u043E\u0440\u0440\u043C"
+VillaEnum.CITY=Город
+VillaEnum.VILLAGE=Село
+ContractDocType.LICENSE_SERVICE = Лицензионное обслуживание
+ContractDocType.PROVIDE_SERVICE = Поставка экземпляра
+ContractDocType.PRODUCT_DELIVERY = Оказание услуг
+NameOrganisationEnum.PARUS = ООО "Дагестан - Парус"
+NameOrganisationEnum.INFORM = ООО "Юг - Информ"
