change doctype and numerator

--- a/global/src/com/haulmont/ext/core/entity/Enum/messages_ru.properties
+++ b/global/src/com/haulmont/ext/core/entity/Enum/messages_ru.properties
@@ -7,7 +7,7 @@
 VillaEnum.CITY=Город
 VillaEnum.VILLAGE=Село
 ContractDocType.LICENSE_SERVICE = Лицензионное обслуживание
-ContractDocType.PROVIDE_SERVICE = Поставка экземпляра
-ContractDocType.PRODUCT_DELIVERY = Оказание услуг
+ContractDocType.PROVIDE_SERVICE = Оказание услуг
+ContractDocType.PRODUCT_DELIVERY = Поставка экземпляра
 NameOrganisationEnum.PARUS = ООО "Дагестан - Парус"
 NameOrganisationEnum.INFORM = ООО "Юг - Информ"
