--- a/global/src/com/haulmont/ext/core/entity/messages_ru.properties
+++ b/global/src/com/haulmont/ext/core/entity/messages_ru.properties
@@ -1,110 +1,110 @@
-ExtHead.name = \u041E\u0442\u043E\u0431\u0440\u0430\u0436\u0430\u0435\u043C\u043E\u0435 \u0438\u043C\u044F
-ExtHead.surname = \u0424\u0430\u043C\u0438\u043B\u0438\u044F
-ExtHead.nameh = \u0418\u043C\u044F
-ExtHead.patronymic = \u041E\u0442\u0447\u0435\u0441\u0442\u0432\u043E
-ExtHead.aread = \u0420\u0430\u0439\u043E\u043D
-ExtHead.company = \u042E\u0440\u0438\u0434\u0438\u0447\u0435\u0441\u043A\u043E\u0435 \u043B\u0438\u0446\u043E
-ExtHead.numberTel = \u0422\u0435\u043B\u0435\u0444\u043E\u043D
-ExtHead.post = \u0414\u043E\u043B\u0436\u043D\u043E\u0441\u0442\u044C
-ExtHead.faxs = \u0424\u0430\u043A\u0441
-ExtHead.email = \u042D\u043B\u0435\u043A\u0442\u0440\u043E\u043D\u043D\u0430\u044F \u043F\u043E\u0447\u0442\u0430
-ExtHead.surnameR = \u0424\u0430\u043C\u0438\u043B\u0438\u044F \u0432 \u0440\u043E\u0434. \u043F\u0430\u0434\u0435\u0436\u0435
-ExtHead.nameR = \u0418\u043C\u044F \u0432 \u0440\u043E\u0434. \u043F\u0430\u0434\u0435\u0436\u0435
-ExtHead.patronymicR = \u041E\u0442\u0447\u0435\u0441\u0442\u0432\u043E \u0432 \u0440\u043E\u0434. \u043F\u0430\u0434\u0435\u0436\u0435
+ExtHead.name = Отображаемое имя
+ExtHead.surname = Фамилия
+ExtHead.nameh = Имя
+ExtHead.patronymic = Отчество
+ExtHead.aread = Район
+ExtHead.company = Юридическое лицо
+ExtHead.numberTel = Телефон
+ExtHead.post = Должность
+ExtHead.faxs = Факс
+ExtHead.email = Электронная почта
+ExtHead.surnameR = Фамилия в род. падеже
+ExtHead.nameR = Имя в род. падеже
+ExtHead.patronymicR = Отчество в род. падеже
 
-Responsible.republic = \u0420\u0435\u0441\u043F\u0443\u0431\u043B\u0438\u043A\u0430
-Responsible.villa = \u0421\u0435\u043B\u043E
-Responsible.aread = \u0420\u0430\u0439\u043E\u043D
-Responsible.numberTel = \u0422\u0435\u043B\u0435\u0444\u043E\u043D
-Responsible.village = \u0421\u0435\u043B\u043E
-Responsible.responsible = \u041E\u0442\u0432\u0435\u0442\u0441\u0442\u0432\u0435\u043D\u043D\u044B\u0439
-Responsible.post = \u0414\u043E\u043B\u0436\u043D\u043E\u0441\u0442\u044C
-Responsible.faxs = \u0424\u0430\u043A\u0441
-Responsible.postalAdress = \u041F\u043E\u0447\u0442\u043E\u0432\u044B\u0439 \u0430\u0434\u0440\u0435\u0441
+Responsible.republic = Республика
+Responsible.villa = Село
+Responsible.aread = Район
+Responsible.numberTel = Телефон
+Responsible.village = Село
+Responsible.responsible = Ответственный
+Responsible.post = Должность
+Responsible.faxs = Факс
+Responsible.postalAdress = Почтовый адрес
 
-ExtClient.company = \u042E\u0440\u0438\u0434\u0438\u0447\u0435\u0441\u043A\u043E\u0435 \u043B\u0438\u0446\u043E
-ExtClient.post = \u0414\u043E\u043B\u0436\u043D\u043E\u0441\u0442\u044C
-ExtClient.legalAddress = \u042E\u0440\u0438\u0434\u0438\u0447\u0435\u0441\u043A\u0438\u0439 \u0430\u0434\u0440\u0435\u0441
-ExtClient.fullName = \u041F\u043E\u043B\u043D\u043E\u0435 \u043D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435
-ExtClient.surnameC= \u0424\u0430\u043C\u0438\u043B\u0438\u044F
-ExtClient.nameC = \u0418\u043C\u044F
-ExtClient.name = \u041E\u0442\u043E\u0431\u0440\u0430\u0436\u0430\u0435\u043C\u043E\u0435 \u0438\u043C\u044F
-ExtClient.patronymicC = \u041E\u0442\u0447\u0435\u0441\u0442\u0432\u043E
-ExtClient.dateBirth = \u0414\u0430\u0442\u0430 \u0440\u043E\u0436\u0434\u0435\u043D\u0438\u044F
-ExtClient.institution = \u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435 \u0443\u0447\u0440\u0435\u0436\u0434\u0435\u043D\u0438\u044F
+ExtClient.company = Юридическое лицо
+ExtClient.post = Должность
+ExtClient.legalAddress = Юридический адрес
+ExtClient.fullName = Полное наименование
+ExtClient.surnameC= Фамилия
+ExtClient.nameC = Имя
+ExtClient.name = Отображаемое имя
+ExtClient.patronymicC = Отчество
+ExtClient.dateBirth = Дата рождения
+ExtClient.institution = Наименование учреждения
 ExtClient.placeBirth= E-mail
-ExtClient.nameCw = \u0421\u0430\u0439\u0442 \u0443\u0447\u0440\u0435\u0436\u0434\u0435\u043D\u0438\u044F
-ExtClient.dateCw = \u0414\u0430\u0442\u0430 \u0440\u043E\u0436\u0434\u0435\u043D\u0438\u044F \u0441\u0443\u043F\u0440\u0443\u0433\u0438
-ExtClient.countChs = \u0418\u043D\u0434\u0435\u043A\u0441
-ExtClient.bank = \u0411\u0430\u043D\u043A
-ExtClient.kpp = \u041A\u041F\u041F
-ExtClient.inn = \u0418\u041D\u041D
-ExtClient.numberTel = \u041B\u0438\u0447\u043D\u044B\u0439 \u0442\u0435\u043B\u0435\u0444\u043E\u043D
-ExtClient.address = \u041F\u043E\u0447\u0442\u043E\u0432\u044B\u0439 \u0430\u0434\u0440\u0435\u0441
-ExtClient.ls = \u041B\u0438\u0446\u0435\u0432\u043E\u0439 \u0441\u0447\u0435\u0442
-ExtClient.bik = \u0411\u0418\u041A
-ExtClient.ks = \u041A\u043E\u0440\u0440\u0435\u0441\u043F\u043E\u043D\u0434\u0435\u043D\u0442\u0441\u043A\u0438\u0439 \u0441\u0447\u0435\u0442
-ExtClient.rs = \u0420\u0430\u0441\u0447\u0435\u0442\u043D\u044B\u0439 \u0441\u0447\u0435\u0442
-ExtClient.numberTw = \u0424\u0430\u043A\u0441
-ExtClient.surnameR = \u0424\u0430\u043C\u0438\u043B\u0438\u044F \u0432 \u0440\u043E\u0434. \u043F\u0430\u0434\u0435\u0436\u0435
-ExtClient.nameR = \u0418\u043C\u044F \u0432 \u0440\u043E\u0434. \u043F\u0430\u0434\u0435\u0436\u0435
-ExtClient.patronymicR = \u041E\u0442\u0447\u0435\u0441\u0442\u0432\u043E \u0432 \u0440\u043E\u0434. \u043F\u0430\u0434\u0435\u0436\u0435
-ExtClient.treasuryDepartment = \u041A\u0430\u0437\u043D\u0430\u0447\u0435\u0439\u0441\u0442\u0432\u043E
-ExtClient.postR = \u0414\u043E\u043B\u0436\u043D\u043E\u0441\u0442\u044C \u0432 \u0440\u043E\u0434. \u043F\u0430\u0434\u0435\u0436\u0435
+ExtClient.nameCw = Сайт учреждения
+ExtClient.dateCw = Дата рождения супруги
+ExtClient.countChs = Индекс
+ExtClient.bank = Банк
+ExtClient.kpp = КПП
+ExtClient.inn = ИНН
+ExtClient.numberTel = Личный телефон
+ExtClient.address = Почтовый адрес
+ExtClient.ls = Лицевой счет
+ExtClient.bik = БИК
+ExtClient.ks = Корреспондентский счет
+ExtClient.rs = Расчетный счет
+ExtClient.numberTw = Факс
+ExtClient.surnameR = Фамилия в род. падеже
+ExtClient.nameR = Имя в род. падеже
+ExtClient.patronymicR = Отчество в род. падеже
+ExtClient.postR = Должность в род. падеже
+ExtClient.treasuryDepartment = Казначейство
 
-CompanyExt.republic = \u0420\u0435\u0441\u043F\u0443\u0431\u043B\u0438\u043A\u0430
-CompanyExt.aread = \u0420\u0430\u0439\u043E\u043D
-CompanyExt.villa = \u041D\u0430\u0441\u0435\u043B\u0435\u043D\u043D\u044B\u0439 \u043F\u0443\u043D\u043A\u0442
-CompanyExt.parentCompanyExt = \u0420\u043E\u0434\u0438\u0442\u0435\u043B\u044C\u0441\u043A\u043E\u0435 \u043F\u043E\u0434\u0440\u0430\u0437\u0434\u0435\u043B\u0435\u043D\u0438\u0435
+CompanyExt.republic = Республика
+CompanyExt.aread = Район
+CompanyExt.villa = Населенный пункт
+CompanyExt.parentCompanyExt = Родительское подразделение
 
-Republic.regionname = \u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435
-Republic.regioncode = \u041A\u043E\u0434
+Republic.regionname = Наименование
+Republic.regioncode = Код
 
-Aread.republic = \u0420\u0435\u0441\u043F\u0443\u0431\u043B\u0438\u043A\u0430
-Aread.areadname = \u0420\u0430\u0439\u043E\u043D
+Aread.republic = Республика
+Aread.areadname = Район
 
-Villa.villaname = \u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435
-Villa.aread = \u0420\u0430\u0439\u043E\u043D
-Villa.republic = \u0420\u0435\u0441\u043F\u0443\u0431\u043B\u0438\u043A\u0430
+Villa.villaname = Наименование
+Villa.aread = Район
+Villa.republic = Республика
 
-ExtModull.name = \u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435 \u043C\u043E\u0434\u0443\u043B\u044F
-ExtModull.price = \u0426\u0435\u043D\u0430 \u0437\u0430 1 \u0435\u0434.
-ExtModull.total = \u041E\u0431\u0449\u0430\u044F \u0441\u0442\u043E\u0438\u043C\u043E\u0441\u0442\u044C
-ExtModull.count = \u041A\u043E\u043B\u0438\u0447\u0435\u0441\u0442\u0432\u043E
-ExtModull.nameContract = \u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u0430
+ExtModull.name = Наименование модуля
+ExtModull.price = Цена за 1 ед.
+ExtModull.total = Общая стоимость
+ExtModull.count = Количество
+ExtModull.nameContract = Наименование документа
 
-ContractPP.villa = \u0413\u043E\u0440\u043E\u0434
-ContractPP.number = \u0447\u0438\u0441\u043B\u043E
-ContractPP.amount = \u0421\u0443\u043C\u043C\u0430
-ContractPP.textAmount = \u0421\u0443\u043C\u043C\u0430 \u043F\u0440\u043E\u043F\u0438\u0441\u044C\u044E
-ContractPP.dateContr = \u0414\u0430\u0442\u0430 \u043D\u0430\u0447\u0430\u043B\u0430 \u0434\u0435\u0439\u0441\u0442\u0432\u0438\u044F
-ContractPP.dateClose = \u0414\u0430\u0442\u0430 \u043E\u043A\u043E\u043D\u0447\u0430\u043D\u0438\u044F \u0434\u0435\u0439\u0441\u0442\u0432\u0438\u044F
-ContractPP.client = \u041F\u0440\u0435\u0434\u0441\u0442\u0430\u0432\u0438\u0442\u0435\u043B\u044C \u0443\u0447\u0440\u0435\u0436\u0434\u0435\u043D\u0438\u044F
-ContractPP.head = \u0413\u043B\u0430\u0432\u0430 \u0440\u0430\u0439\u043E\u043D\u0430
-ContractPP.extCompany = \u041A\u043B\u0438\u0435\u043D\u0442
-ContractPP.hasAttachments = \u0412\u043B\u043E\u0436\u0435\u043D\u0438\u044F
-ContractPP.nameContract = \u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u0430
-ContractPP.comment = \u0421\u043E\u0434\u0435\u0440\u0436\u0430\u043D\u0438\u0435
-hasAttachments = \u0412\u043B\u043E\u0436\u0435\u043D\u0438\u044F
-comment = \u0421\u043E\u0434\u0435\u0440\u0436\u0430\u043D\u0438\u0435
+ContractPP.villa = Город
+ContractPP.number = число
+ContractPP.amount = Сумма
+ContractPP.textAmount = Сумма прописью
+ContractPP.dateContr = Дата начала действия
+ContractPP.dateClose = Дата окончания действия
+ContractPP.client = Представитель учреждения
+ContractPP.head = Глава района
+ContractPP.extCompany = Клиент
+ContractPP.hasAttachments = Вложения
+ContractPP.nameContract = Наименование документа
+ContractPP.comment = Содержание
+hasAttachments = Вложения
+comment = Содержание
 
-JournalV.dateJV = \u0414\u0430\u0442\u0430
-JournalV.someone = \u041E\u0442 \u043A\u043E\u0433\u043E
-JournalV.contentV = \u0421\u043E\u0434\u0435\u0440\u0436\u0430\u043D\u0438\u0435
-JournalV.contactJV = \u041A\u043E\u043D\u0442\u0430\u043A\u0442\u044B
-JournalV.statusV = \u0422\u0435\u043A\u0443\u0449\u0435\u0435 \u0441\u043E\u0441\u0442\u043E\u044F\u043D\u0438\u0435
-JournalV.numberJV = \u041D\u043E\u043C\u0435\u0440 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u0430
+JournalV.dateJV = Дата
+JournalV.someone = От кого
+JournalV.contentV = Содержание
+JournalV.contactJV = Контакты
+JournalV.statusV = Текущее состояние
+JournalV.numberJV = Номер документа
 
-JournalI.dateJI = \u0414\u0430\u0442\u0430
-JournalI.whom = \u041A\u043E\u043C\u0443
-JournalI.contentI = \u0421\u043E\u0434\u0435\u0440\u0436\u0430\u043D\u0438\u0435
-JournalI.contactJI = \u041A\u043E\u043D\u0442\u0430\u043A\u0442\u044B
-JournalI.statusI = \u0422\u0435\u043A\u0443\u0449\u0435\u0435 \u0441\u043E\u0441\u0442\u043E\u044F\u043D\u0438\u0435
-JournalI.numberJI = \u041D\u043E\u043C\u0435\u0440 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u0430
+JournalI.dateJI = Дата
+JournalI.whom = Кому
+JournalI.contentI = Содержание
+JournalI.contactJI = Контакты
+JournalI.statusI = Текущее состояние
+JournalI.numberJI = Номер документа
 
-Call.name = \u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435
-Call.callDescription = \u041E\u043F\u0438\u0441\u0430\u043D\u0438\u0435
-Call.telephoneNumber = \u041D\u043E\u043C\u0435\u0440 \u0442\u0435\u043B\u0435\u0444\u043E\u043D\u0430
-Call.extClient = \u041A\u043B\u0438\u0435\u043D\u0442
-Call.priority = \u041F\u0440\u0438\u043E\u0440\u0438\u0442\u0435\u0442
-Call.finishDatePLan = \u0414\u043E \u043A\u0430\u043A\u043E\u0439 \u0434\u0430\u0442\u044B
+Call.name = Наименование
+Call.callDescription = Описание
+Call.telephoneNumber = Номер телефона
+Call.extClient = Клиент
+Call.priority = Приоритет
+Call.finishDatePLan = До какой даты
