--- a/web/src/com/haulmont/ext/web/ui/Client/messages_ru.properties
+++ b/web/src/com/haulmont/ext/web/ui/Client/messages_ru.properties
@@ -1,32 +1,32 @@
-browserCaption = \u041A\u043B\u0438\u0435\u043D\u0442\u044B
-editorCaption=\u041A\u043B\u0438\u0435\u043D\u0442
-extCompany = \u042E\u0440\u0438\u0434\u0438\u0447\u0435\u0441\u043A\u043E\u0435 \u043B\u0438\u0446\u043E
-surnameC = \u0424\u0430\u043C\u0438\u043B\u0438\u044F
-nameC = \u0418\u043C\u044F
-name = \u041E\u0442\u043E\u0431\u0440\u0430\u0436\u0430\u0435\u043C\u043E\u0435 \u0438\u043C\u044F
-patronymicC = \u041E\u0442\u0447\u0435\u0441\u0442\u0432\u043E
-institution = \u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435 \u0443\u0447\u0440\u0435\u0436\u0434\u0435\u043D\u0438\u044F
-numberTel = \u0422\u0435\u043B\u0435\u0444\u043E\u043D
-post = \u0414\u043E\u043B\u0436\u043D\u043E\u0441\u0442\u044C
-company=\u042E\u0440\u0438\u0434\u0438\u0447\u0435\u0441\u043A\u043E\u0435 \u043B\u0438\u0446\u043E
-numberTw = \u0424\u0430\u043A\u0441
-dateBirth = \u0414\u0430\u0442\u0430 \u0440\u043E\u0436\u0434\u0435\u043D\u0438\u044F
+browserCaption = Клиенты
+editorCaption=Клиент
+extCompany = Юридическое лицо
+surnameC = Фамилия
+nameC = Имя
+name = Отображаемое имя
+patronymicC = Отчество
+institution = Наименование учреждения
+numberTel = Телефон
+post = Должность
+company=Юридическое лицо
+numberTw = Факс
+dateBirth = Дата рождения
 placeBirth = E-mail
-address = \u041F\u043E\u0447\u0442\u043E\u0432\u044B\u0439 \u0430\u0434\u0440\u0435\u0441
-nameCw = \u0421\u0430\u0439\u0442 \u0443\u0447\u0440\u0435\u0436\u0434\u0435\u043D\u0438\u044F
-dateCw = \u0414\u0430\u0442\u0430 \u0440\u043E\u0436\u0434\u0435\u043D\u0438\u044F \u0441\u0443\u043F\u0440\u0443\u0433\u0438
-kpp = \u041A\u041F\u041F
-bank = \u0411\u0430\u043D\u043A
-countChs = \u0418\u043D\u0434\u0435\u043A\u0441
-inn = \u0418\u041D\u041D
-ls = \u041B\u0438\u0446\u0435\u0432\u043E\u0439 \u0441\u0447\u0435\u0442
-rs = \u0420\u0430\u0441\u0447\u0435\u0442\u043D\u044B\u0439 \u0441\u0447\u0435\u0442
-ks = \u041A\u043E\u0440\u0440\u0435\u0441\u043F\u043E\u043D\u0434\u0435\u043D\u0442\u0441\u043A\u0438\u0439 \u0441\u0447\u0435\u0442
-bik = \u0411\u0418\u041A
-surnameR = \u0424\u0430\u043C\u0438\u043B\u0438\u044F \u0432 \u0440\u043E\u0434. \u043F\u0430\u0434\u0435\u0436\u0435
-nameR = \u0418\u043C\u044F \u0432 \u0440\u043E\u0434. \u043F\u0430\u0434\u0435\u0436\u0435
-patronymicR = \u041E\u0442\u0447\u0435\u0441\u0442\u0432\u043E \u0432 \u0440\u043E\u0434. \u043F\u0430\u0434\u0435\u0436\u0435
-fullName = \u041F\u043E\u043B\u043D\u043E\u0435 \u043D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435
-legalAddress = \u042E\u0440\u0438\u0434\u0438\u0447\u0435\u0441\u043A\u0438\u0439 \u0430\u0434\u0440\u0435\u0441
-treasuryDepartment = \u041A\u0430\u0437\u043D\u0430\u0447\u0435\u0439\u0441\u0442\u0432\u043E
-postR = \u0414\u043E\u043B\u0436\u043D\u043E\u0441\u0442\u044C \u0432 \u0440\u043E\u0434. \u043F\u0430\u0434\u0435\u0436\u0435
+address = Почтовый адрес
+nameCw = Сайт учреждения
+dateCw = Дата рождения супруги
+kpp = КПП
+bank = Банк
+countChs = Индекс
+inn = ИНН
+ls = Лицевой счет
+rs = Расчетный счет
+ks = Корреспондентский счет
+bik = БИК
+surnameR = Фамилия в род. падеже
+nameR = Имя в род. падеже
+patronymicR = Отчество в род. падеже
+fullName = Полное наименование
+legalAddress = Юридический адрес
+postR = Должность в род. падеже
+treasuryDepartment = Казначейство
