--- a/web/src/com/haulmont/ext/web/ui/Villa/messages_ru.properties
+++ b/web/src/com/haulmont/ext/web/ui/Villa/messages_ru.properties
@@ -1,8 +1,8 @@
-browserCaption=Населенные пункты
-editorCaption=населенный пункт
+browserCaption=\u041D\u0430\u0441\u0435\u043B\u0435\u043D\u043D\u044B\u0435 \u043F\u0443\u043D\u043A\u0442\u044B
+editorCaption=\u043D\u0430\u0441\u0435\u043B\u0435\u043D\u043D\u044B\u0439 \u043F\u0443\u043D\u043A\u0442
 
-villaname=Наименование
-aread=Район
-republic=Республика
-typeVilla=Населенный пункт
-areaCenter = Районный центр Вау
+villaname=\u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435
+aread=\u0420\u0430\u0439\u043E\u043D
+republic=\u0420\u0435\u0441\u043F\u0443\u0431\u043B\u0438\u043A\u0430
+typeVilla=\u041D\u0430\u0441\u0435\u043B\u0435\u043D\u043D\u044B\u0439 \u043F\u0443\u043D\u043A\u0442
+areaCenter = \u0420\u0430\u0439\u043E\u043D\u043D\u044B\u0439 \u0446\u0435\u043D\u0442\u0440 \u042D\u0439 \u0442\u044B
