--- a/web/src/com/haulmont/ext/web/ui/Villa/messages_ru.properties
+++ b/web/src/com/haulmont/ext/web/ui/Villa/messages_ru.properties
@@ -5,4 +5,4 @@ villaname=Наименование
 aread=Район
 republic=Республика
 typeVilla=Населенный пункт
-areaCenter = Районный центр
+areaCenter = Районный центр f
