add organization in contractpp

--- a/global/src/com/haulmont/ext/core/entity/messages_ru.properties
+++ b/global/src/com/haulmont/ext/core/entity/messages_ru.properties
@@ -84,6 +84,7 @@ ContractPP.head = Глава района
 ContractPP.extCompany = Клиент
 ContractPP.hasAttachments = Вложения
 ContractPP.nameContract = Наименование документа
+ContractPP.organization = Организация
 ContractPP.comment = Содержание
 hasAttachments = Вложения
 comment = Содержание
