--- a/web/src/com/haulmont/ext/web/ui/ContractPP/messages_ru.properties
+++ b/web/src/com/haulmont/ext/web/ui/ContractPP/messages_ru.properties
@@ -44,7 +44,7 @@ EntityLogAttr.value=Значение
 procName=Тек. процесс
 state=Тек. состояние
 
-nameOrganisation = Наименование организации
+organization = Организация
 nameContract = Наименование документа
 actions.Remove=Удалить
 actions.Ok=ОК
