add print button and change modull nameContract

--- a/global/src/com/haulmont/ext/core/entity/Enum/messages_ru.properties
+++ b/global/src/com/haulmont/ext/core/entity/Enum/messages_ru.properties
@@ -9,5 +9,6 @@ VillaEnum.VILLAGE=Село
 ContractDocType.LICENSE_SERVICE = Лицензионное обслуживание
 ContractDocType.PROVIDE_SERVICE = Оказание услуг
 ContractDocType.PRODUCT_DELIVERY = Поставка экземпляра
+ContractDocType.CONTRACT_ANTI = Договор на антивирус
 NameOrganisationEnum.PARUS = ООО "Дагестан - Парус"
 NameOrganisationEnum.INFORM = ООО "Юг - Информ"
