--- a/web/src/com/haulmont/ext/web/ui/ContractPP/messages_ru.properties
+++ b/web/src/com/haulmont/ext/web/ui/ContractPP/messages_ru.properties
@@ -74,5 +74,6 @@ modullTotalCost = Итого
 Contract_LO = Договор ЛО
 ContractOU = Договор ОУ
 ContractPI = Договор ПЭ
+ContractppAV = Договор на антивирус
 count = Количество
 totalCost = Итого
