--- a/web/src/com/haulmont/ext/web/ui/ContractPP/messages_ru.properties
+++ b/web/src/com/haulmont/ext/web/ui/ContractPP/messages_ru.properties
@@ -75,5 +75,6 @@ Contract_LO = Договор ЛО
 ContractOU = Договор ОУ
 ContractPI = Договор ПЭ
 ContractppAV = Договор на антивирус
+Contractpp_LO_AV = Договор ЛО на антивирус
 count = Количество
 totalCost = Итого
