add_conrractt_assign

--- a/global/src/com/haulmont/ext/core/entity/Enum/messages_ru.properties
+++ b/global/src/com/haulmont/ext/core/entity/Enum/messages_ru.properties
@@ -6,5 +6,6 @@ ContractDocType.PROVIDE_SERVICE = Оказание услуг
 ContractDocType.PRODUCT_DELIVERY = Поставка экземпляра
 ContractDocType.CONTRACT_ANTI = Договор на антивирус
 ContractDocType.CONTRACT_LO_ANTI = Договор ЛО на антивирус
+ContractDocType.CONTRACT_ASSIGINT = Дополнительное соглашенин
 NameOrganisationEnum.PARUS = ООО "Дагестан - Парус"
 NameOrganisationEnum.INFORM = ООО "Юг - Информ"
