--- a/web/src/com/haulmont/ext/web/ui/ContractPP/messages_ru.properties
+++ b/web/src/com/haulmont/ext/web/ui/ContractPP/messages_ru.properties
@@ -76,5 +76,6 @@ ContractOU = Договор ОУ
 ContractPI = Договор ПЭ
 ContractppAV = Договор на антивирус
 Contractpp_LO_AV = Договор ЛО на антивирус
+Contract_assegint = Дополнительное соглашение
 count = Количество
 totalCost = Итого
