add_conrractpp_name_ContractppAV

--- a/global/src/com/haulmont/ext/core/entity/Enum/messages_ru.properties
+++ b/global/src/com/haulmont/ext/core/entity/Enum/messages_ru.properties
@@ -4,7 +4,7 @@ VillaEnum.VILLAGE=Село
 ContractDocType.LICENSE_SERVICE = Лицензионное обслуживание
 ContractDocType.PROVIDE_SERVICE = Оказание услуг
 ContractDocType.PRODUCT_DELIVERY = Поставка экземпляра
-ContractDocType.CONTRACT_ANTI = Договор на антивирус
+ContractDocType.CONTRACT_ANTI = Договор поставки антивируса
 ContractDocType.CONTRACT_LO_ANTI = Договор ЛО на антивирус
 ContractDocType.CONTRACT_ASSIGINT = Дополнительное соглашенин
 NameOrganisationEnum.PARUS = ООО "Дагестан - Парус"
