--- a/web/src/com/haulmont/ext/web/ui/ContractPP/messages_ru.properties
+++ b/web/src/com/haulmont/ext/web/ui/ContractPP/messages_ru.properties
@@ -74,7 +74,7 @@ modullTotalCost = Итого
 Contract_LO = Договор ЛО
 ContractOU = Договор ОУ
 ContractPI = Договор ПЭ
-ContractppAV = Договор на антивирус
+ContractppAV = Договор поставки антивируса
 Contractpp_LO_AV = Договор ЛО на антивирус
 Contract_assegint = Дополнительное соглашение
 count = Количество
