--- a/web/src/com/haulmont/ext/web/ui/ContractPP/messages_ru.properties
+++ b/web/src/com/haulmont/ext/web/ui/ContractPP/messages_ru.properties
@@ -79,3 +79,5 @@ Contractpp_LO_AV = Договор ЛО на антивирус
 Contract_assegint = Дополнительное соглашение
 count = Количество
 totalCost = Итого
+administration = Администрация
+dateCome = Дата приезда
