change service import client. now we can import file from fileupload.

--- a/web/src/com/haulmont/ext/web/ui/Load/messages_ru.properties
+++ b/web/src/com/haulmont/ext/web/ui/Load/messages_ru.properties
@@ -1,4 +1,5 @@
-pathToCSV=Путь
-importRecord=Загрузить
-import=Загрузка
-browserCaption=Импорт справочника
+pathToCSV=Открыть и загрузить
+importRecord=Импортировать
+import=Все здесь
+browserCaption=Импорт справочников
+open=Файл
