Add history call of either client in Call entity. Change fullname in ExtClient.

--- a/web/src/com/haulmont/ext/web/ui/Call/messages_ru.properties
+++ b/web/src/com/haulmont/ext/web/ui/Call/messages_ru.properties
@@ -57,3 +57,5 @@ contractPP.new=Новые
 currentActors=Сейчас у
 error.requiredValue=Заполните поле
 open=Открыть
+prevCall=Все звонки клиента
+extCompany=Юр. лицо
